tests/errors/pp-merge-nonoctdigits.h
#define EXPANDME1 0 ## 8
enum E {
	A = EXPANDME1
};
